# ChangeLog for app-arch/sharutils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.68 2011/02/06 16:55:15 jer Exp $

*sharutils-4.11 (06 Feb 2011)

  06 Feb 2011; Jeroen Roovers <jer@gentoo.org> +sharutils-4.11.ebuild:
  Version bump.

*sharutils-4.10 (30 Aug 2010)

  30 Aug 2010; Jeroen Roovers <jer@gentoo.org> +sharutils-4.10.ebuild:
  Version bump.

  07 Mar 2010; Mike Frysinger <vapier@gentoo.org> sharutils-4.9.ebuild:
  Fix up SRC_URI #308183 by Locke Shinseiko.

*sharutils-4.9 (06 Mar 2010)

  06 Mar 2010; Mike Frysinger <vapier@gentoo.org> +sharutils-4.9.ebuild:
  Version bump #306663 by Jeroen Roovers.

  24 Feb 2010; Jeroen Roovers <jer@gentoo.org> sharutils-4.7.ebuild:
  Fix LICENSE.

  15 Jan 2010; Jonathan Callen <abcd@gentoo.org>
  +files/sharutils-4.6.3-interix.patch, sharutils-4.7.ebuild:
  Add prefix keywords; patch for interix

  18 Mar 2009; <ricmm@gentoo.org> sharutils-4.6.3.ebuild:
  Drop down to ~mips due to unstable deps

  07 Feb 2009; Raúl Porcel <armin76@gentoo.org> sharutils-4.7.ebuild:
  arm/ia64/s390/sh stable wrt #249125

  12 Jan 2009; Guy Martin <gmsoft@gentoo.org> sharutils-4.7.ebuild:
  hppa stable, #249125

  10 Jan 2009; Tobias Klausmann <klausman@gentoo.org> sharutils-4.7.ebuild:
  Stable on alpha, bug #249125

  09 Jan 2009; Brent Baude <ranger@gentoo.org> sharutils-4.7.ebuild:
  stable ppc, bug 249125

  07 Jan 2009; Brent Baude <ranger@gentoo.org> sharutils-4.7.ebuild:
  stable ppc64, bug 249125

  04 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> sharutils-4.7.ebuild:
  Stable on sparc, bug #249125

  04 Jan 2009; Markus Meier <maekke@gentoo.org> sharutils-4.7.ebuild:
  amd64/x86 stable, bug #249125

*sharutils-4.7 (17 Sep 2008)

  17 Sep 2008; Mike Frysinger <vapier@gentoo.org> +sharutils-4.7.ebuild:
  Version bump #237151 by Conrad Kostecki.

  02 Jul 2007; Daniel Black <dragonheart@gentoo.org>